:flower: added SonataFlow instance and configuration
Signed-off-by: Ricardo Zanini <zanini@redhat.com>

--- a/dataindex/02-dataindex.yaml
+++ b/dataindex/02-dataindex.yaml
@@ -58,4 +58,4 @@ spec:
       targetPort: 8080
   selector:
     app.kubernetes.io/name: data-index-service-postgresql
-  type: ClusterIP
+  type: NodePort
