--- a/usecases/usecase2/kustomization.yaml
+++ b/usecases/usecase2/kustomization.yaml
@@ -1,4 +1,5 @@
 resources:
 - ../../platforms/dataindex_platform
+- ../../infra/service_discovery
 - ../../workflows/sonataflow-greeting
 - ../../workflows/sonataflow-helloworld
