--- a/usecases/usecase3/kustomization.yaml
+++ b/usecases/usecase3/kustomization.yaml
@@ -1,3 +1,4 @@
 resources:
 - ../../platforms/dataindex_and_jobservice_platform
+- ../../infra/service_discovery
 - ../../workflows/sonataflow-callbackstatetimeouts
