--- a/workflows/sonataflow-callbackstatetimeouts-persistence/02-configmap_callbackstatetimeouts-props.yaml
+++ b/workflows/sonataflow-callbackstatetimeouts-persistence/02-configmap_callbackstatetimeouts-props.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 data:
   application.properties: |
-    kogito.service.url=http://callbackstatetimeouts
+    kogito.service.url=${kubernetes:services.v1/callbackstatetimeouts}
     
     # Job Service kogito-addons-quarkus-jobs-knative-eventing configuration
     mp.messaging.outgoing.kogito-job-service-job-request-events.connector=quarkus-http
