--- a/workflows/sonataflow-greeting/02-configmap_greeting-props.yaml
+++ b/workflows/sonataflow-greeting/02-configmap_greeting-props.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 data:
   application.properties: |
-    kogito.service.url=http://greeting
+    kogito.service.url=${kubernetes:services.v1/greeting}
 
     # Data Index configuration
     mp.messaging.outgoing.kogito-processinstances-events.url=http://data-index-service-postgresql/processes
