--- a/workflows/sonataflow-helloworld/02-configmap_helloworld-props.yaml
+++ b/workflows/sonataflow-helloworld/02-configmap_helloworld-props.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 data:
   application.properties: |
-    kogito.service.url=http://helloworld
+    kogito.service.url=${kubernetes:services.v1/helloworld}
 
     # Data Index configuration
     mp.messaging.outgoing.kogito-processinstances-events.url=http://data-index-service-postgresql/processes
