--- a/workflows/sonataflow-callbackstatetimeouts-persistence/02-configmap_callbackstatetimeouts-props.yaml
+++ b/workflows/sonataflow-callbackstatetimeouts-persistence/02-configmap_callbackstatetimeouts-props.yaml
@@ -22,12 +22,12 @@ data:
     kogito.persistence.type=jdbc
     kogito.persistence.proto.marshaller=false
     kogito.persistence.query.timeout.millis=10000
+   
     quarkus.datasource.db-kind=postgresql
-    quarkus.flyway.migrate-at-start=true
-    # TODO review why need to set this property if the kogito-addons-persistence-jdbc is already setting it
-    quarkus.flyway.locations=classpath:/db/postgresql
-    
-    quarkus.datasource.jdbc.url=jdbc:postgresql://postgres:5432/sonataflow?currentSchema=sonataflow-runtime
+    # Set to false to create the tables manually. Automatic generation is a different use case.
+    quarkus.flyway.migrate-at-start=false
+      
+    quarkus.datasource.jdbc.url=jdbc:postgresql://postgres:5432/sonataflow
     quarkus.datasource.username=sonataflow
     quarkus.datasource.password=sonataflow
 
