--- a/workflows/sonataflow-callbackstatetimeouts-persistence/02-configmap_callbackstatetimeouts-props.yaml
+++ b/workflows/sonataflow-callbackstatetimeouts-persistence/02-configmap_callbackstatetimeouts-props.yaml
@@ -1,7 +1,10 @@
 apiVersion: v1
 data:
   application.properties: |
-    kogito.service.url=${kubernetes:services.v1/callbackstatetimeouts}
+    # Uncomment this line if you want the service discovery to determine the kogito.service.url,
+    # otherwise the operator will automatically default this property with the cluster DNS name of the service
+    # http://callbackstatetimeouts.usecase3-persistence 
+    # kogito.service.url=${kubernetes:services.v1/callbackstatetimeouts}
     
     # Job Service kogito-addons-quarkus-jobs-knative-eventing configuration
     mp.messaging.outgoing.kogito-job-service-job-request-events.connector=quarkus-http
