--- a/workflows/sonataflow-callbackstatetimeouts-persistence/03-sonataflow_callbackstatetimeouts.sw.yaml
+++ b/workflows/sonataflow-callbackstatetimeouts-persistence/03-sonataflow_callbackstatetimeouts.sw.yaml
@@ -6,6 +6,12 @@ metadata:
     sonataflow.org/description: Callback State Timeouts Example k8s
     sonataflow.org/version: 0.0.1
 spec:
+  podTemplate:
+    initContainers:
+      - name: init-postgres
+        image: registry.access.redhat.com/ubi9/ubi-minimal:latest
+        imagePullPolicy: IfNotPresent
+        command: [ 'sh', '-c', 'until (echo 1 > /dev/tcp/postgres.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local/5432) >/dev/null 2>&1; do echo "Waiting for postgres server"; sleep 3; done;' ]
   flow:
     start: PrintStartMessage
     events:
