--- a/infra/dataindex/01-postgres.yaml
+++ b/infra/dataindex/01-postgres.yaml
@@ -30,29 +30,39 @@ spec:
     spec:
       containers:
         - name: postgres
-          image: postgres:13.2-alpine
+          image: registry.redhat.io/rhel8/postgresql-13
           imagePullPolicy: 'IfNotPresent'
           ports:
             - containerPort: 5432
+              protocol: TCP
           volumeMounts:
             - name: storage
-              mountPath: /var/lib/postgresql/data
+              mountPath: /var/lib/pgsql/data
           envFrom:
             - secretRef:
                 name: postgres-secrets
           readinessProbe:
             exec:
-              command: ["pg_isready"]
-            initialDelaySeconds: 15
-            timeoutSeconds: 2
+              command:
+                - /usr/libexec/check-container
+            initialDelaySeconds: 5
+            timeoutSeconds: 1
+            periodSeconds: 10
+            successThreshold: 1
+            failureThreshold: 3
           livenessProbe:
             exec:
-              command: ["pg_isready"]
-            initialDelaySeconds: 15
-            timeoutSeconds: 2
+              command:
+                - /usr/libexec/check-container
+                - '--live'
+            initialDelaySeconds: 120
+            timeoutSeconds: 10
+            periodSeconds: 10
+            successThreshold: 1
+            failureThreshold: 3
           resources:
             limits:
-              memory: "256Mi"
+              memory: "512Mi"
               cpu: "500m"
       volumes:
       - name: storage
