Set kustomize command order:     - Configure the kustomize command order to fifo, and in this way the apply commands are executed in the order desired by each usecase

--- a/usecases/usecase4/kustomization.yaml
+++ b/usecases/usecase4/kustomization.yaml
@@ -4,3 +4,6 @@ resources:
 - ../../workflows/sonataflow-greeting
 - ../../workflows/sonataflow-callbackstatetimeouts
 - ../../workflows/sonataflow-workflowtimeouts
+
+sortOptions:
+  order: fifo
