--- a/usecases/usecase1/kustomization.yaml
+++ b/usecases/usecase1/kustomization.yaml
@@ -2,3 +2,6 @@ resources:
 - ../../platforms/dataindex_platform
 - ../../infra/service_discovery
 - ../../workflows/sonataflow-greeting
+
+sortOptions:
+  order: fifo
