--- a/usecases/usecase2/kustomization.yaml
+++ b/usecases/usecase2/kustomization.yaml
@@ -3,3 +3,7 @@ resources:
 - ../../infra/service_discovery
 - ../../workflows/sonataflow-greeting
 - ../../workflows/sonataflow-helloworld
+
+sortOptions:
+  order: fifo
+
