--- a/usecases/usecase3-persistence/kustomization.yaml
+++ b/usecases/usecase3-persistence/kustomization.yaml
@@ -2,3 +2,6 @@ resources:
 - ../../platforms/dataindex_and_jobservice_platform_persistence
 - ../../infra/service_discovery
 - ../../workflows/sonataflow-callbackstatetimeouts-persistence
+
+sortOptions:
+  order: fifo
