--- a/usecases/usecase3/kustomization.yaml
+++ b/usecases/usecase3/kustomization.yaml
@@ -2,3 +2,6 @@ resources:
 - ../../platforms/dataindex_and_jobservice_platform
 - ../../infra/service_discovery
 - ../../workflows/sonataflow-callbackstatetimeouts
+
+sortOptions:
+  order: fifo
