--- a/workflows/sonataflow-greeting/02-configmap_greeting-props.yaml
+++ b/workflows/sonataflow-greeting/02-configmap_greeting-props.yaml
@@ -2,15 +2,17 @@ apiVersion: v1
 data:
   application.properties: |
     # Data Index configuration
+    mp.messaging.outgoing.kogito-processdefinitions-events.url=http://data-index-service-postgresql/definitions
+
     mp.messaging.outgoing.kogito-processinstances-events.url=http://data-index-service-postgresql/processes
 
     mp.messaging.outgoing.kogito-usertaskinstances-events.url=http://data-index-service-postgresql/tasks
-
-    mp.messaging.outgoing.kogito-variables-events.url=http://data-index-service-postgresql/variables
-
-    # Skip user tasks and variables events sending.
+        
+    kogito.events.processdefinitions.enabled=true
+    kogito.events.processinstances.enabled=true
+  
+    # Skip user tasks events sending.
     kogito.events.usertasks.enabled=false
-    kogito.events.variables.enabled=false
   
     quarkus.log.category."io.smallrye.reactive.messaging".level = DEBUG
     quarkus.log.category."org.kie".level = DEBUG
