--- a/platforms/openshift-dataindex_and_jobservice_as_platform_service_postgresql/02-sonataflow_platform.yaml
+++ b/platforms/openshift-dataindex_and_jobservice_as_platform_service_postgresql/02-sonataflow_platform.yaml
@@ -3,11 +3,11 @@ kind: SonataFlowPlatform
 metadata:
   name: sonataflow-platform
 spec:
-  build:
-    template:
-      buildArgs:
-      - name: QUARKUS_EXTENSIONS
-        value: org.kie.kogito:kogito-addons-quarkus-jobs-knative-eventing:999-SNAPSHOT
+#  build:
+#    template:
+#      buildArgs:
+#      - name: QUARKUS_EXTENSIONS
+#        value: org.kie.kogito:kogito-addons-quarkus-jobs-knative-eventing:999-SNAPSHOT
   services:
     dataIndex:
       enabled: true
