--- a/platforms/dataindex_and_jobservice_platform/01-sonataflow_platform.yaml
+++ b/platforms/dataindex_and_jobservice_platform/01-sonataflow_platform.yaml
@@ -4,10 +4,10 @@ metadata:
   name: sonataflow-platform
 spec:
   build:
-    template:
-      buildArgs:
-      - name: QUARKUS_EXTENSIONS
-        value: org.kie.kogito:kogito-addons-quarkus-jobs-knative-eventing:999-SNAPSHOT
+#    template:
+#      buildArgs:
+#      - name: QUARKUS_EXTENSIONS
+#        value: org.kie.kogito:kogito-addons-quarkus-jobs-knative-eventing:999-SNAPSHOT
     config:
       strategyOptions:
         KanikoBuildCacheEnabled: "true"
