Platform Persistence Configuration Adjustments

--- a/platforms/openshift-dataindex_and_jobservice_as_platform_service_and_global_persistence_postgresql/02-sonataflow_platform.yaml
+++ b/platforms/openshift-dataindex_and_jobservice_as_platform_service_and_global_persistence_postgresql/02-sonataflow_platform.yaml
@@ -9,6 +9,7 @@ spec:
         - name: QUARKUS_EXTENSIONS
           value: org.kie.kogito:kogito-addons-quarkus-persistence-jdbc:999-SNAPSHOT,io.quarkus:quarkus-jdbc-postgresql:3.2.9.Final,io.quarkus:quarkus-agroal:3.2.9.Final
   services:
+    # no persistence is defined for the DI, it will take it from the SFP if any.
     dataIndex:
       enabled: true
       podTemplate:
@@ -18,6 +19,7 @@ spec:
             imagePullPolicy: IfNotPresent
             command: [ 'sh', '-c', 'until (echo 1 > /dev/tcp/postgres.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local/5432) >/dev/null 2>&1; do echo "Waiting for postgres server"; sleep 3; done;' ]
     jobService:
+      # no persistence is defined for the JS, it will take it from the SFP if any.
       enabled: true
       podTemplate:
         initContainers:
@@ -33,4 +35,4 @@ spec:
         passwordKey: POSTGRESQL_PASSWORD
       serviceRef:
         name: postgres
-        databaseName: sonataflow2
+        databaseName: sonataflow_pfdb
