--- a/platforms/data_index_and_jobservice_as_platform_service_postgresql/02-sonataflow_platform.yaml
+++ b/platforms/data_index_and_jobservice_as_platform_service_postgresql/02-sonataflow_platform.yaml
@@ -3,6 +3,11 @@ kind: SonataFlowPlatform
 metadata:
   name: sonataflow-platform
 spec:
+  build:
+    template:
+    config:
+      strategyOptions:
+        KanikoBuildCacheEnabled: "true"
   services:
     dataIndex:
       enabled: true
@@ -11,8 +16,8 @@ spec:
           jdbcUrl: jdbc:postgresql://postgres:5432/sonataflow?currentSchema=data-index-service
           secretRef:
             name: postgres-secrets
-            userKey: POSTGRESQL_USER
-            passwordKey: POSTGRESQL_PASSWORD
+            userKey: POSTGRES_USER
+            passwordKey: POSTGRES_PASSWORD
       podTemplate:
         initContainers:
           - name: init-postgres
@@ -26,8 +31,8 @@ spec:
           jdbcUrl: jdbc:postgresql://postgres:5432/sonataflow?currentSchema=jobs-service
           secretRef:
             name: postgres-secrets
-            userKey: POSTGRESQL_USER
-            passwordKey: POSTGRESQL_PASSWORD
+            userKey: POSTGRES_USER
+            passwordKey: POSTGRES_PASSWORD
       podTemplate:
         initContainers:
           - name: init-postgres
