--- a/platforms/data_index_and_jobservice_as_platform_service_postgresql_persistence/02-sonataflow_platform.yaml
+++ b/platforms/data_index_and_jobservice_as_platform_service_postgresql_persistence/02-sonataflow_platform.yaml
@@ -4,6 +4,10 @@ metadata:
   name: sonataflow-platform
 spec:
   build:
+    template:
+      buildArgs:
+        - name: QUARKUS_EXTENSIONS
+          value: org.kie.kogito:kogito-addons-quarkus-persistence-jdbc:999-SNAPSHOT,io.quarkus:quarkus-jdbc-postgresql:3.2.9.Final,io.quarkus:quarkus-agroal:3.2.9.Final
     config:
       strategyOptions:
         KanikoBuildCacheEnabled: "true"
