Disable the  KanikoBuildCacheEnabled: 'true' since it's not working

--- a/platforms/data_index_and_jobservice_as_platform_service_postgresql_persistence-flyway/02-sonataflow_platform.yaml
+++ b/platforms/data_index_and_jobservice_as_platform_service_postgresql_persistence-flyway/02-sonataflow_platform.yaml
@@ -4,9 +4,15 @@ metadata:
   name: sonataflow-platform
 spec:
   build:
+    template:
+      buildArgs:
+        - name: QUARKUS_EXTENSIONS
+          value: org.kie.kogito:kogito-addons-quarkus-persistence-jdbc:999-SNAPSHOT,io.quarkus:quarkus-jdbc-postgresql:3.2.9.Final,io.quarkus:quarkus-agroal:3.2.9.Final
+        - name: MAVEN_ARGS_APPEND
+          value: -Dkogito.persistence.type=jdbc -Dkogito.persistence.proto.marshaller=false -Dkogito.persistence.query.timeout.millis=10000 -Dquarkus.datasource.db-kind=postgresql
     config:
       strategyOptions:
-#        KanikoBuildCacheEnabled: "true" is not working
+#               KanikoBuildCacheEnabled: "true" is not working
         KanikoBuildCacheEnabled: "false"
   services:
     dataIndex:
