--- a/platforms/data_index_as_platform_service_postgresql/02-sonataflow_platform.yaml
+++ b/platforms/data_index_as_platform_service_postgresql/02-sonataflow_platform.yaml
@@ -6,7 +6,8 @@ spec:
   build:
     config:
       strategyOptions:
-        KanikoBuildCacheEnabled: "true"
+        # KanikoBuildCacheEnabled: "true" is not working, at least in my local
+        KanikoBuildCacheEnabled: "false"
   services:
     dataIndex:
       enabled: true
