OC global persitence updates

--- a/platforms/openshift-dataindex_and_jobservice_as_platform_service_and_global_persistence_postgresql/01-postgres.yaml
+++ b/platforms/openshift-dataindex_and_jobservice_as_platform_service_and_global_persistence_postgresql/01-postgres.yaml
@@ -28,6 +28,8 @@ spec:
       labels:
         app.kubernetes.io/name: postgres
     spec:
+      imagePullSecrets:
+        - name: 6340056-sonataflow-testing-pull-secret
       containers:
         - name: postgres
           image: registry.redhat.io/rhel8/postgresql-13
