--- a/platforms/openshift-dataindex_and_jobservice_as_platform_service_and_global_persistence_postgresql/02-sonataflow_platform.yaml
+++ b/platforms/openshift-dataindex_and_jobservice_as_platform_service_and_global_persistence_postgresql/02-sonataflow_platform.yaml
@@ -30,4 +30,4 @@ spec:
         passwordKey: POSTGRESQL_PASSWORD
       serviceRef:
         name: postgres
-        databaseName: sonataflow_pfdb
+        databaseName: sonataflow
