--- a/platforms/openshift-dataindex_and_jobservice_as_platform_service_and_global_persistence_postgresql/kustomization.yaml
+++ b/platforms/openshift-dataindex_and_jobservice_as_platform_service_and_global_persistence_postgresql/kustomization.yaml
@@ -1,4 +1,5 @@
 resources:
+- 6340056-sonataflow-testing-pull-secret.yaml
 - 01-postgres.yaml
 - 02-sonataflow_platform.yaml
 
@@ -10,7 +11,7 @@ secretGenerator:
     literals:
       - POSTGRESQL_USER=sonataflow
       - POSTGRESQL_PASSWORD=sonataflow
-      - POSTGRESQL_DATABASE=sonataflow_pfdb
+      - POSTGRESQL_DATABASE=sonataflow
       - PGDATA=/var/lib/pgsql/data/userdata
 
 sortOptions:
