--- a/platforms/data_index_and_jobservice_as_platform_service_postgresql_persistence_knative_eventing/case1/03-sonataflow_platform.yaml
+++ b/platforms/data_index_and_jobservice_as_platform_service_postgresql_persistence_knative_eventing/case1/03-sonataflow_platform.yaml
@@ -8,10 +8,10 @@ spec:
       strategyOptions:
         KanikoBuildCacheEnabled: "false"
   eventing:
+    # Platform Broker configuration. Should be used by DI, JS and the workflows.
     broker:
       ref:
         name: default
-        # namespace: sonataflow-infra
         apiVersion: eventing.knative.dev/v1
         kind: Broker
   services:
@@ -46,12 +46,6 @@ spec:
             userKey: POSTGRES_USER
             passwordKey: POSTGRES_PASSWORD
       podTemplate:
-        container:
-          env:
-            - name: MP_MESSAGING_OUTGOING_KOGITO_JOB_SERVICE_JOB_STATUS_EVENTS_HTTP_URL
-              value: ${K_SINK}
-            - name: QUARKUS_SMALLRYE_HEALTH_CHECK__ORG_KIE_KOGITO_JOBS_SERVICE_MESSAGING_HTTP_HEALTH_KNATIVE_KSINKINJECTIONHEALTHCHECK__ENABLED
-              value: "true"
         initContainers:
                 - name: init-postgres
                   image: registry.access.redhat.com/ubi9/ubi-minimal:latest
