--- a/platforms/data_index_and_jobservice_as_platform_service_postgresql_persistence_knative_eventing/case5/workflows/06-sonataflow_callbackstatetimeouts.sw.yaml
+++ b/platforms/data_index_and_jobservice_as_platform_service_postgresql_persistence_knative_eventing/case5/workflows/06-sonataflow_callbackstatetimeouts.sw.yaml
@@ -19,13 +19,9 @@ spec:
         passwordKey: POSTGRES_PASSWORD
       serviceRef:
         name: postgres
+        # reuse the database used by DI and JS for simplicity.
+        namespace: case5-kn-eventing
         databaseName: sonataflow
-  podTemplate:
-    initContainers:
-      - name: init-postgres
-        image: registry.access.redhat.com/ubi9/ubi-minimal:latest
-        imagePullPolicy: IfNotPresent
-        command: [ 'sh', '-c', 'until (echo 1 > /dev/tcp/postgres.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local/5432) >/dev/null 2>&1; do echo "Waiting for postgres server"; sleep 3; done;' ]
   flow:
     start: PrintStartMessage
     events:
