--- a/platforms/data_index_and_jobservice_as_platform_service_postgresql_persistence_knative_eventing/common/02-optional-event-display.yaml
+++ b/platforms/data_index_and_jobservice_as_platform_service_postgresql_persistence_knative_eventing/common/02-optional-event-display.yaml
@@ -42,7 +42,7 @@ kind: Trigger
 metadata:
   name: trigger-eventdisplay
 spec:
-  broker: default
+  broker: sonataflow-broker
   subscriber:
     ref:
       apiVersion: serving.knative.dev/v1
