Knative eventing use case updates

--- a/platforms/data_index_and_jobservice_as_platform_service_postgresql_persistence_knative_eventing/case2/03-sonataflow_platform.yaml
+++ b/platforms/data_index_and_jobservice_as_platform_service_postgresql_persistence_knative_eventing/case2/03-sonataflow_platform.yaml
@@ -3,6 +3,9 @@ kind: SonataFlowPlatform
 metadata:
   name: sonataflow-platform
 spec:
+  # DI has individual broker configuration
+  # JS has individual broker configuration
+  # WF has no Broker configuration, the WF deployment will fail.
   services:
     dataIndex:
       enabled: true
