Knative Eventing Case5 updates

--- a/platforms/data_index_and_jobservice_as_platform_service_postgresql_persistence_knative_eventing/case5/03-sonataflow_platform.yaml
+++ b/platforms/data_index_and_jobservice_as_platform_service_postgresql_persistence_knative_eventing/case5/03-sonataflow_platform.yaml
@@ -14,6 +14,7 @@ spec:
     dataIndex:
       enabled: true
       persistence:
+        migrateDBOnStartUp: true
         postgresql:
           serviceRef:
             name: postgres
@@ -32,6 +33,7 @@ spec:
     jobService:
       enabled: true
       persistence:
+        migrateDBOnStartUp: true
         postgresql:
           serviceRef:
             name: postgres
