Knative Eventing Case1, 2, 3, and 4 updates

--- a/platforms/data_index_and_jobservice_as_platform_service_postgresql_persistence_knative_eventing/case1/06-sonataflow_callbackstatetimeouts.sw.yaml
+++ b/platforms/data_index_and_jobservice_as_platform_service_postgresql_persistence_knative_eventing/case1/06-sonataflow_callbackstatetimeouts.sw.yaml
@@ -12,6 +12,7 @@ spec:
   # 2) add the necessary build time properties related to the persistence in the form of maven build attributes
   # Broker configuration must be taken form the SPF
   persistence:
+    migrateDBOnStartUp: true
     postgresql:
       secretRef:
         name: postgres-secrets
