--- a/platforms/data_index_and_jobservice_as_platform_service_postgresql_persistence_knative_eventing/case2/03-sonataflow_platform.yaml
+++ b/platforms/data_index_and_jobservice_as_platform_service_postgresql_persistence_knative_eventing/case2/03-sonataflow_platform.yaml
@@ -15,6 +15,7 @@ spec:
           apiVersion: eventing.knative.dev/v1
           kind: Broker
       persistence:
+        migrateDBOnStartUp: true
         postgresql:
           serviceRef:
             name: postgres
@@ -43,6 +44,7 @@ spec:
           apiVersion: eventing.knative.dev/v1
           kind: Broker
       persistence:
+        migrateDBOnStartUp: true
         postgresql:
           serviceRef:
             name: postgres
