--- a/platforms/data_index_and_jobservice_as_platform_service_postgresql_persistence_knative_eventing/case3-no-events/03-sonataflow_platform.yaml
+++ b/platforms/data_index_and_jobservice_as_platform_service_postgresql_persistence_knative_eventing/case3-no-events/03-sonataflow_platform.yaml
@@ -7,6 +7,7 @@ spec:
     dataIndex:
       enabled: true
       persistence:
+        migrateDBOnStartUp: true
         postgresql:
           serviceRef:
             name: postgres
@@ -25,6 +26,7 @@ spec:
     jobService:
       enabled: true
       persistence:
+        migrateDBOnStartUp: true
         postgresql:
           serviceRef:
             name: postgres
