--- a/platforms/data_index_and_jobservice_as_platform_service_postgresql_persistence_knative_eventing/case3-no-events/06-sonataflow_callbackstatetimeouts.sw.yaml
+++ b/platforms/data_index_and_jobservice_as_platform_service_postgresql_persistence_knative_eventing/case3-no-events/06-sonataflow_callbackstatetimeouts.sw.yaml
@@ -11,6 +11,7 @@ spec:
   # 1) add the necessary quarkus extensions related to the persistence
   # 2) add the necessary build time properties related to the persistence in the form of maven build attributes
   persistence:
+    migrateDBOnStartUp: true
     postgresql:
       secretRef:
         name: postgres-secrets
