--- a/platforms/data_index_and_jobservice_as_platform_service_postgresql_persistence_knative_eventing/case3/03-sonataflow_platform.yaml
+++ b/platforms/data_index_and_jobservice_as_platform_service_postgresql_persistence_knative_eventing/case3/03-sonataflow_platform.yaml
@@ -12,6 +12,7 @@ spec:
           apiVersion: eventing.knative.dev/v1
           kind: Broker
       persistence:
+        migrateDBOnStartUp: true
         postgresql:
           serviceRef:
             name: postgres
@@ -40,6 +41,7 @@ spec:
           apiVersion: eventing.knative.dev/v1
           kind: Broker
       persistence:
+        migrateDBOnStartUp: true
         postgresql:
           serviceRef:
             name: postgres
