--- a/platforms/data_index_and_jobservice_as_platform_service_postgresql/02-sonataflow_platform.yaml
+++ b/platforms/data_index_and_jobservice_as_platform_service_postgresql/02-sonataflow_platform.yaml
@@ -7,7 +7,7 @@ spec:
     config:
       strategyOptions:
 #        KanikoBuildCacheEnabled: "true" is not working
-        KanikoBuildCacheEnabled: "false"
+        KanikoBuildCacheEnabled: "true"
   services:
     dataIndex:
       enabled: true
