--- a/platforms/data_index_and_jobservice_as_platform_service_postgresql_persistence_knative_eventing_manual_no_sink_binding/kustomization.yaml
+++ b/platforms/data_index_and_jobservice_as_platform_service_postgresql_persistence_knative_eventing_manual_no_sink_binding/kustomization.yaml
@@ -1,8 +1,8 @@
 resources:
 # DB server and Broker
 - 01-postgres.yaml
-#- 02-default-broker.yaml
-- 02-default-broker-kafka.yaml
+- 02-default-broker.yaml
+#- 02-default-broker-kafka.yaml
 # Optional to track events for debugging
 - 02-optional-event-display.yml
 # Sink binding and triggers for data-index and jobs service respectively
